--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 Flask==3.0.2
+
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+
+psycopg2-binary==2.9.9
+
 python-dotenv==1.0.1
 loguru==0.7.2
