--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ email_validator==2.2.0
 reportlab==4.3.1
 
 html2text==2024.2.26
+
+git+https://github.com/ajrlewis/forecastkit.git@a80ab3a1f6f9848604cb70bebea4e9e9b3ee13e9
